add another example to README